      time zone lookups
    - reuse timer in spawner engine
    - early return when HarrowerTentacles have no drain targets
    - reuse TimerChangeEntry objects
  * manual synchronization of TimerThread.m_ChangeQueue
  * obsolete APIs
    - ScriptCompiler.Assemblies
  * moved filesystem paths from Core to Core.Config
    - LogDirectory
    - CacheDirectory

 --

sunuo (0.4.1) unstable; urgency=low

  * lock m_Accounts in Accounting.Accounts
  * fixed account database corruption bug
  * show correct client number in disconnect message

 -- Max Kellermann <max@duempel.org>  Mon, 25 Dec 2006 01:46:23 +0100

sunuo (0.4.0) unstable; urgency=low

  * implemented a main loop profiler
  * refuse to load objects with serial -1
  * transactional world save
  * non-interactive world repair
  * reserve 10% space in mobile/item hash tables
  * script debugging is always enabled
  * explicit TileData initialization
  * added Config.Network
    - configure Listeners
  * Listener.Slice() returns null when idle
  * ScriptCompiler ignores control directories of common revision control
    systems
  * bugfix in Mobile.cs: send poison message only for standard poisons
    (patch from Kai Sassmannshausen)
  * login: optionally limit the number of account creations per IP (patch
    from Patrick Reinhardt)
  * disable some of the string.Intern() calls because they were poisoning
    the intern tables
  * synchronize NetState.FinishDispose()
  * implemented feature "manual-gc" for manual garbage collection
  * parsing boolean values from the configuration file is now strict
  * enable AutoAccountCreation by default
  * added legacy scripts
    - use log4net for logging
    - removed Address from ServerList
    - default to server list from Config.GameServerListConfig
    - get server name from Config.ServerName
    - make backup path portable
    - display "SunUO" in UOGInfo packet
    - use Config.ConfigDirectory, Config.BackupDirectory
    - get IPLimiter config from Config.Login